# masscalculator-core

./: .clang-format  .clang-tidy  .gitignore  .travis.yml  AUTHORS  CHANGELOG.md  CMakeLists.old.txt  CMakeLists.txt  CPackConfig.cmake  CTestConfig.cmake  Dockerfile  Doxyfile  Jenkinsfile  LICENSE  README.md
MassCalculator/: CMakeLists.txt  MassCalculator.drawio
MassCalculator/examples/: CMakeLists.txt  example_1.cpp
MassCalculator/helper_classes/: helper_functions.cpp  helper_functions.hpp  lua_handler.cpp  lua_handler.hpp
MassCalculator/helper_functions/: helper_functions.cpp  helper_functions.hpp
MassCalculator/include/: object.h
MassCalculator/include/interface/: object.h  object_interface.hpp
MassCalculator/include/materials/: alloy_coppers.hpp  alloy_steels.hpp  aluminium.h  aluminium.hpp  brass.hpp  bronz.hpp  copper.hpp  magnesium.hpp  material.h  material.hpp  materials.hh  nickel.hpp  plastic.hpp  stainless_steel.hpp  steel.hpp  titanium.hpp  zinc.hpp
MassCalculator/include/shapes/: angle.hpp  bar.hpp  beam.hpp  channel.hpp  cylinder.h  cylinder.hpp  dxf_shape.hpp  elipse.hpp  hexagon_bar.hpp  octagon_bar.hpp  pipe.hpp  shape.h  shape.hpp  shapes.hh  sheet.hpp  square_bar.hpp  square_tubing.hpp  stl_shape.hpp  t_bar.hpp
MassCalculator/resources/materials/: alloy_coppers.lua  alloy_coppers_config.lua  alloy_steels_config.lua  aluminium_config.lua  brass_config.lua  bronz_config.lua  copper_config.lua  magnesium_config.lua  nickel_config.lua  plastic_config.lua  stainless_steel_config.lua  steel_config.lua  titanium_config.lua  zinc_config.lua
MassCalculator/resources/shapes/: cylinder_config.lua
MassCalculator/src/: object.cpp
MassCalculator/src/interface/: object.cpp  object_interface.cpp
MassCalculator/src/materials/: alloy_coppers.cpp  alloy_steels.cpp  aluminium.cpp  brass.cpp  bronz.cpp  copper.cpp  magnesium.cpp  material.cpp  nickel.cpp  plastic.cpp  stainless_steel.cpp  steel.cpp  titanium.cpp  zinc.cpp
MassCalculator/src/shapes/: angle.cpp  bar.cpp  beam.cpp  channel.cpp  cylinder.cpp  dxf_shape.cpp  elipse.cpp  hexagon_bar.cpp  octagon_bar.cpp  pipe.cpp  shape.cpp  sheet.cpp  square_bar.cpp  square_tubing.cpp  stl_shape.cpp  t_bar.cpp
MassCalculator/test/: CMakeLists.txt  cylinder_test.cpp
MassCalculator/test/interface/: object_interface_test.cpp  object_interface_test.hpp
MassCalculator/test/materials/: CMakeLists.txt  alloy_coppers_test.cpp  alloy_coppers_test.hpp  alloy_steels_test.cpp  alloy_steels_test.hpp  aluminium_test.cpp  aluminium_test.hpp  brass_test.cpp  brass_test.hpp  bronz_test.cpp  bronz_test.hpp  copper_test.cpp  copper_test.hpp  magnesium_test.cpp  magnesium_test.hpp  nickel_test.cpp  nickel_test.hpp  plastic_test.cpp  plastic_test.hpp  stainless_steel_test.cpp  stainless_steel_test.hpp  steel_test.cpp  steel_test.hpp  titanium_test.cpp  titanium_test.hpp  zinc_test.cpp  zinc_test.hpp
MassCalculator/test/shapes/: CMakeLists.txt  cylinder_test.cpp  cylinder_test.hpp  square_bar_test.hpp
MassCalculatorGUI/: CMakeLists.txt
MassCalculatorGUI/form/: mainwindow.ui
MassCalculatorGUI/include/: mainwindow.h
MassCalculatorGUI/src/: main.cpp  mainwindow.cpp
MassCalculatorGUI/src/test_examples/: MassCalculator.cpp  Untitled-1  main.cpp
MassCalculatorGUI/test/: CMakeLists.txt
libraries/base/: CMakeLists.txt
libraries/base/config/: software_version.h.in
libraries/base/include/masscalculator/base/: immutable_map.h  macro_logger.h
libraries/lua-handler/: CMakeLists.txt
libraries/lua-handler/include/: lua_handler.h
libraries/lua-handler/src/: lua_handler.cc
libraries/lua-handler/tests/: CMakeLists.txt  lua_handler_test.cc  lua_handler_test.h
libraries/lua-handler/tests/config/: lua_handler_data.h.in
libraries/lua-handler/tests/data/: lua_handler_test_data.lua
libraries/masscalculator-base/: CMakeLists.txt
libraries/masscalculator-base/config/: software_version.h.in
libraries/masscalculator-base/src/: lua_handler.cc
libraries/masscalculator-base/tests/: CMakeLists.txt  lua_handler_test.cc  lua_handler_test.h
libraries/masscalculator-base/tests/config/: lua_handler_data.h.in
libraries/masscalculator-core/: CMakeLists.txt
libraries/masscalculator-core/config/: resources.h.in  software_version.h.in
libraries/masscalculator-core/include/materials/: alloy_coppers.h  alloy_steels.hpp  material.h  nickel.hpp  zinc.hpp
libraries/masscalculator-core/include/shapes/: angle.hpp  octagon_bar.hpp  pipe.hpp  shape.hpp
libraries/masscalculator-core/resources/materials/: alloy_coppers_config.lua  alloy_steels_config.lua  aluminium_config.lua  brass_config.lua  bronz_config.lua  nickel_config.lua
libraries/masscalculator-core/src/interface/: object_interface.cc
libraries/masscalculator-core/src/materials/: alloy_coppers.cc  alloy_coppers.cpp  alloy_steels.cc  aluminium.cc  brass.cc  copper.cpp  material.cc  plastic.cc  stainless_steel.cpp  steel.cpp  zinc.cc
libraries/masscalculator-core/src/shapes/: cylinder.cc  hexagon_bar.cc  octagon_bar.cc  shape.cc  square_bar.cpp  square_tubing.cc
libraries/masscalculator-core/tests/: CMakeLists.txt
libraries/masscalculator-core/tests/interface/: CMakeLists.txt  object_interface_test.cc  object_interface_test.h  object_interface_test.hpp
libraries/masscalculator-core/tests/materials/: CMakeLists.txt  alloy_coppers_test.cc  alloy_coppers_test.cpp  alloy_coppers_test.h  alloy_coppers_test.hpp  alloy_steels_test.cc  alloy_steels_test.h  alloy_steels_test.hpp  aluminium_test.cc  aluminium_test.h  aluminium_test.hpp  brass_test.cc  brass_test.h  bronz_test.h  copper_test.hpp  plastic_test.cpp  plastic_test.h  stainless_steel_test.cpp  stainless_steel_test.h  titanium_test.hpp  zinc_test.cpp
libraries/masscalculator-core/tests/shapes/: CMakeLists.txt  cylinder_test.cc  cylinder_test.h  cylinder_test.hpp  square_bar_test.h  square_tubing_test.cpp
test/interface/: CMakeLists.txt  object_interface_test.cpp  object_interface_test.hpp
test/shapes/: CMakeLists.txt  cylinder_test.cpp  square_bar_test.cpp  square_bar_test.hpp  square_tubing_test.hpp
(+116 files in other folders)
